# English_Listen

./: CMakeLists.txt  QtEnglishListen.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  qt_main.cpp
